# Todo_app

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_fastapi.py
