[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "A simple FastAPI Todo application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "psycopg2-binary",
    "python-dateutil"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
